<resources>
    <string name="app_name">Paws and Claws</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="doctor">Dokter</string>
    <string name="customer">Pelanggan</string>
    <string name="report">Laporan</string>
    <string name="greeting_fullname">Hai,</string>
    <string name="greeting_role">Anda masuk sebagai</string>
    <string name="logout">Keluar</string>
    <string name="message_logout">Apakah anda yakin untuk keluar ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="doctor_list">Daftar Dokter</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="status">Status</string>
    <string name="active">Aktif</string>
    <string name="not_active">Tidak Aktif</string>
    <string name="update">Ubah</string>
    <string name="empty">Data tidak tersedia</string>
    <string name="doctor_update">Ubah Dokter</string>
    <string name="empty_username">Nama Pengguna wajib diisi</string>
    <string name="empty_fullname">Nama Lengkap wajib diisi</string>
    <string name="empty_status">Status wajib dipilih salah satu</string>
    <string name="empty_username_password">Nama Pengguna dan Kata Sandi wajib diisi</string>
    <string name="insert">Tambah</string>
    <string name="doctor_insert">Tambah Dokter</string>
    <string name="empty_password">Kata Sandi wajib diisi</string>
    <string name="customer_list">Daftar Pelanggan</string>
    <string name="phone">Kontak</string>
    <string name="address">Alamat</string>
    <string name="empty_phone">Kontak wajib diisi</string>
    <string name="empty_address">Alamat wajib diisi</string>
    <string name="customer_insert">Tambah Pelanggan</string>
    <string name="menus">Menu</string>
    <string-array name="context_menu">
        <item>Ubah</item>
        <item>Hapus</item>
    </string-array>
    <string name="colon">:</string>
    <string name="delete">Hapus</string>
    <string name="customer_detail">Rincian Pelanggan</string>
    <string name="customer_update">Ubah Pelanggan</string>
    <string name="start_date">Tanggal Mulai</string>
    <string name="end_date">Tanggal Akhir</string>
    <string name="view_report">Lihat Laporan</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="profile">Profil</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="password_update">Ubah Password</string>
    <string name="empty_password_confirmation">Konfirmasi Kata Sandi wajib diisi</string>
    <string name="comparison_password">Konfirmasi Kata Sandi wajib sama dengan Kata Sandi</string>
    <string name="notification">Notifikasi</string>
    <string name="empty_pet">Anda belum mendaftarkan hewan kesayangan anda</string>
    <string name="pet_name">Nama Hewan</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="age">Usia (minggu)</string>
    <string name="breed">Ras</string>
    <string name="color">Warna</string>
    <string name="pet_type">Jenis Hewan</string>
    <string name="cat">Kucing</string>
    <string name="dog">Anjing</string>
    <string name="empty_pet_name">Nama Hewan wajib diisi</string>
    <string name="empty_dob">Tanggal Lahir wajib diisi</string>
    <string name="empty_age">Usia wajib diisi</string>
    <string name="empty_breed">Ras wajib diisi</string>
    <string name="empty_color">Warna wajib diisi</string>
    <string name="empty_pet_type">Jenis Hewan wajib diisi</string>
    <string name="empty_sex">Jenis Kelamin wajib diisi</string>
    <string name="pet_insert">Tambah Hewan</string>
    <string name="empty_photo">Foto wajib diisi</string>
    <string name="photo_choose">Pilih Foto</string>
    <string name="photo_upload">Unggah Foto</string>
    <string name="pet_detail">Rincian Hewan</string>
    <string name="view_detail">Lihat Rincian</string>
    <string name="examination_history">Sejarah Pemeriksaan</string>
    <string name="forgot_password">Untuk pendaftaran dan lupa kata sandi, silakan hubungi administrator.</string>
    <string name="action">&#8942;</string>
    <string name="photo">Foto</string>
    <string name="pet_update">Ubah Hewan</string>
    <string name="vaccine_recommendation">Rekomendasi Vaksin</string>
    <string name="next">Lanjutkan</string>
    <string name="pet_list">Daftar Hewan</string>
    <string name="empty_pet_customer">Pelanggan ini belum mendaftarkan hewannya</string>
    <string name="empty_customer">Data pelanggan belum tersedia</string>
    <string name="vaccine_examination">Pemeriksaan Vaksin Baru</string>
    <string name="medical_examination">Pemeriksaan Medikal Baru</string>
    <string name="weight">Berat Badan</string>
    <string name="temperature">Temperatur</string>
    <string name="due_date">Tanggal Jatuh Tempo</string>
    <string name="given_date">Tanggal Pemeriksaan</string>
    <string name="vaccine_list">Daftar Pemeriksaan Vaksin</string>
    <string name="medical_list">Daftar Pemeriksaan Medikal</string>
    <string name="save">Simpan</string>
    <string name="remark">Catatan</string>
    <string name="vaccine">Pemeriksaan Vaksin</string>
    <string name="medical">Pemeriksaan Medikal</string>
    <string name="examination_history_detail">Detail Sejarah Pemeriksaan</string>
    <string name="report_vaccine">Laporan Jumlah Vaksin Terpakai</string>
    <string name="report_pet">Laporan Jumlah Pemeriksaan Hewan</string>
    <string name="report_period">Periode %1$s s/d %2$s</string>
    <string name="next_vaccination_schedule">Jadwal Vaksinasi Selanjutnya</string>
    <string name="empty_upload">Anda belum memilih foto terbaru</string>
    <string name="remark_detail">Catatan : %1$s</string>
    <string name="medicine_detail">Obat : %1$s</string>
    <string name="next_date">Next Date</string>
    <string name="empty_weight">Berat Badan wajib diisi</string>
    <string name="empty_temperature">Temperatur wajib diisi</string>
    <string name="empty_given_date">Tanggal Pemeriksaan wajib diisi</string>
    <string name="empty_vaccine_examination_detail">Daftar Pemeriksaan Vaksin wajib diisi</string>
    <string name="empty_medical_examination_detail">Daftar Pemeriksaan Medikal wajib diisi</string>
    <string name="message_delete">Apakah anda yakin untuk menghapus %1$s ?</string>
    <string name="size">Ukuran</string>
    <string name="medicine">Obat</string>
    <string name="date">%1$i-%2$i-%3$i</string>
    <string name="period">(%1$s minggu)</string>
    <string name="weight_value">%1$s Kg</string>
    <string name="temperature_value">%1$s °C</string>
</resources>
