<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="mobile.skripsi.pawsandclaws.activities.PetUpdateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/photo"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llButton"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhoto"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bPhotoChoose"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_green"
                android:text="@string/photo_choose"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/bPhotoUpload"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_green"
                android:text="@string/photo_upload"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llButton"
            android:labelFor="@+id/etPetName"
            android:text="@string/pet_name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPetName"
            android:inputType="text|textPersonName"
            android:maxLines="1"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/tvPetType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPetName"
            android:text="@string/pet_type"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rgPetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPetType"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgPetType"
            android:text="@string/sex"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgSex"
            android:labelFor="@+id/etDOB"
            android:text="@string/dob"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDOB"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/tvBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDOB"
            android:labelFor="@+id/etBreed"
            android:text="@string/breed"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBreed"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etBreed"
            android:labelFor="@+id/etColor"
            android:text="@string/color"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvColor"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorGray" />

        <Button
            android:id="@+id/bUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etColor"
            android:background="@drawable/image_button_green"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</ScrollView>