<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="mobile.skripsi.pawsandclaws.activities.PetInsertActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/pick_photo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tvPhoto"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <Button
            android:id="@+id/bUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/image_button_green"
            android:text="@string/upload"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvPetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bUpload"
            android:text="@string/pet_name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPetName"
            android:inputType="text|textPersonName"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tvPetType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPetName"
            android:text="@string/pet_type"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rgPetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPetType"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/dog" />

            <RadioButton
                android:id="@+id/rbCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/cat" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgPetType"
            android:text="@string/sex"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgSex"
            android:text="@string/dob"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDOB"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDOB"
            android:text="@string/age"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAge"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tvBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAge"
            android:text="@string/breed"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBreed"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etBreed"
            android:text="@string/color"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvColor"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/bInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etColor"
            android:background="@drawable/image_button_green"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/insert"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</ScrollView>