<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="mobile.skripsi.pawsandclaws.activities.DoctorUpdateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etUsername"
            android:text="@string/username"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUsername"
            android:inputType="text|textPersonName"
            android:maxLines="1"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:labelFor="@+id/etFullname"
            android:text="@string/fullname"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFullname"
            android:inputType="text|textPersonName"
            android:maxLines="1"
            android:textColor="@color/colorGray" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFullname"
            android:text="@string/status"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rgStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStatus"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbNotActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_active"
                android:textColor="@color/colorGray"
                tools:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <Button
            android:id="@+id/bUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgStatus"
            android:background="@drawable/image_button_green"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/update"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</ScrollView>